image gap fix test 2

--- a/index.css
+++ b/index.css
@@ -3,13 +3,11 @@
   margin: 1em;
   margin-bottom: 5em;
   width: fit-content;
-  /* background-color: #444; */
 }
 
 .image-container img {
   max-width: 100%;
   max-height: 100vh;
-  border: 2px solid #444;
 }
 
 /* Grid line stylings */
@@ -25,11 +23,11 @@
 
 .grid-line.vertical {
   height: 100%;
-  width: 0.5px;
+  width: 1px;
 }
 
 .grid-line.horizontal {
-  height: 0.5px;
+  height: 1px;
   width: 100%;
 }
 
